<resources>
    <string name="app_name">SEW-7a-Calculator</string>
    <string name="toolbar_title">Calculator</string>
    <string name="first_value_placeholder">Value 1</string>
    <string name="second_value_placeholder">Value 2</string>
    <string name="addition_symbol">+</string>
    <string name="substraction_symbol">-</string>
    <string name="multiplication_symbol">*</string>
    <string name="division_symbol">/</string>
    <string name="text_calculate">Calculate</string>
    <string name="text_ms">MS</string>
    <string name="text_mr">MR</string>
    <string name="text_result_default">0</string>
</resources>