<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="412dp"
        android:layout_height="69dp"
        android:layout_marginBottom="662dp"
        android:background="@color/components"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="18dp"
        android:text="@string/toolbar_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <EditText
        android:id="@+id/edit_text_first"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/first_value_placeholder"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/radio_addition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/edit_text_second"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/second_value_placeholder"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="219dp"
        android:orientation="horizontal"
        >

    <RadioButton
        android:id="@+id/radio_addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/addition_symbol"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_second"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_first" />

    <RadioButton
        android:id="@+id/radio_substraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/substraction_symbol"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_second"
        app:layout_constraintEnd_toStartOf="@+id/radio_multiplication"
        app:layout_constraintStart_toEndOf="@+id/radio_addition"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_first" />

    <RadioButton
        android:id="@+id/radio_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="-20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/multiplication_symbol"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_second"
        app:layout_constraintEnd_toStartOf="@+id/radio_division"
        app:layout_constraintStart_toEndOf="@+id/radio_substraction"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_first"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/radio_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/division_symbol"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radio_multiplication"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_first"
        app:layout_constraintVertical_bias="0.0" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_calculate"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="342dp"
        android:background="@color/components"
        android:text="@string/text_calculate"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_second" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_ms"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="342dp"
        android:background="@color/components"
        android:text="@string/text_ms"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_mr"
        app:layout_constraintStart_toEndOf="@+id/button_calculate"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_second" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_mr"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="342dp"
        android:background="@color/components"
        android:text="@string/text_mr"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_ms"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_second" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="461dp" />

</androidx.constraintlayout.widget.ConstraintLayout>